Avoid crashing on non-fatal Objective-C exceptions caused by a 10.4-only Apple bug. b=461381 r=josh sr=roc