xpcom/base/nsObjCExceptions.h
@@ -240,4 +240,10 @@ NS_OBJC_TRY(_e, )
                                           nsObjCExceptionLog(_exn);             \
                                         }
 
+#define NS_OBJC_BEGIN_TRY_LOGONLY_BLOCK_RETURN    @try {
+#define NS_OBJC_END_TRY_LOGONLY_BLOCK_RETURN(_rv) } @catch(NSException *_exn) { \
+                                                    nsObjCExceptionLog(_exn);   \
+                                                  }                             \
+                                                  return _rv;
+
 #endif // nsObjCExceptions_h_
